# Project-Group-Alpha

./: Cargo.toml  README.md
migrations/: 20250723095042_create_users_table.sql  20250723101021_add_password_to_users.sql  20250728222925_projects.sql  20250728222933_tasks.sql  20250729152956_add_status_enum_to_tasks.sql  20250729154930_add_due_date_to_tasks.sql
src/: ctx.rs  errors.rs  main.rs
src/web/: db.rs  mod.rs  mw_auth.rs  projects.rs  routes_auth.rs  routes_hello.rs  routes_login.rs  routes_projects.rs  routes_tasks.rs  tasks.rs  user.rs
src/web/auth/: mod.rs
src/web/project/: mod.rs  routes.rs
src/web/task/: mod.rs  routes.rs
src/web/user/: mod.rs  routes.rs
tests/: quick_dev.rs
