[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
hyper = "1"
httpc-test = "0.1.1"
anyhow = "1.0.98"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower-http = {version = "0.5", features = ["cors", "trace", "fs"] }
tower = { version = "0.5", features = ["util"] }